bug fix - home page on small screen

--- a/app/assets/stylesheets/components/chartsTable.scss
+++ b/app/assets/stylesheets/components/chartsTable.scss
@@ -71,6 +71,10 @@ $charts-table-border: solid 3px $color-grey-background;
 
   .chartsTable-cell.mod-reform-name {
     min-width: 200px;
+
+    @media (max-width: 410px) {
+      min-width: 100px;
+    }
   }
 
 
@@ -146,7 +150,7 @@ $charts-table-border: solid 3px $color-grey-background;
     }
 }
 
-$width-homepage-charts-table-show-charts: 410px;
+$width-homepage-charts-table-show-charts: 475px;
 
 .chartsTable.mod-homepage {
 
